--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,17 +9,17 @@
 
 /* BASE - Base styles, variables, mixins, etc. */
 
-@import 'base/_base.scss';
-@import 'base/_mixins.scss';
-@import 'base/_variables.scss';
+@import '0-base/_base.scss';
+@import '0-base/_mixins.scss';
+@import '0-base/_variables.scss';
 
 /* MODULES - Individual site components */
 
-@import 'modules/_buttons.scss';
-@import 'modules/_forms.scss';
+@import '1-modules/_buttons.scss';
+@import '1-modules/_forms.scss';
 
 /* LAYOUTS - Page layout styles */
 
-@import 'layouts/_nav.scss';
-@import 'layouts/_header.scss';
-@import 'layouts/_footer.scss';
+@import '2-layouts/_nav.scss';
+@import '2-layouts/_header.scss';
+@import '2-layouts/_footer.scss';
