--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -17,6 +17,7 @@
 
 @import '1-modules/_buttons.scss';
 @import '1-modules/_forms.scss';
+@import '1-modules/_typography.scss';
 
 /* LAYOUTS - Page layout styles */
 
