--- a/src/assets/scss/0-base/_base.scss
+++ b/src/assets/scss/0-base/_base.scss
@@ -2,7 +2,7 @@
 
 * {
     box-sizing: border-box;
-    font-family: 'Open Sans Condensed', sans-serif;
+    font-family: 'Open Sans Light', sans-serif;
     font-size: 16px;
 }
 
@@ -22,4 +22,12 @@ button {
 
 .big-text {
     font-size: 4em;
+}
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
 }
