--- a/src/assets/scss/0-base/_variables.scss
+++ b/src/assets/scss/0-base/_variables.scss
@@ -6,11 +6,13 @@ $x-palette-light: #fff;
 $x-palette-light-gray: #E1DFE1;
 $x-palette-dark-gray: #313439;
 $x-palette-dark: #000;
+// Global variables
+$palette-primary: $x-palette-light;
+$palette-secondary: $x-palette-dark-gray;
+$palette-paragraph: $x-palette-dark-gray;
+
 $font-primary: 'Open Sans Light', sans-serif;
 $font-secondary: 'Open Sans Semi Bold', sans-serif;
 $font-tertiary: 'Bebas Neue Book', sans-serif;
 $font-quaternary: 'Anurati Regular', sans-serif;
-// Global variables
-$palette-primary: $x-palette-light;
-$palette-secondary: $x-palette-violet;
-$palette-paragraph: $x-palette-dark-gray;
+$font-paragraph: 'Open Sans Regular', sans-serif;
