--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -23,5 +23,5 @@
 
 @import '2-layouts/_nav.scss';
 @import '2-layouts/_header.scss';
-@import '2-layouts/_trabajos.scss';
+@import '2-layouts/_work.scss';
 @import '2-layouts/_footer.scss';
