--- a/src/assets/scss/2-layouts/_work.scss
+++ b/src/assets/scss/2-layouts/_work.scss
@@ -115,7 +115,7 @@
     &__box--light:last-child:hover {
         background-color: #DD4056;
         button {
-            border: 1px solid #f3f3f3;
+            border: 1px solid #301C41;
             background-color: transparent;
         }
         button:hover {
