--- a/src/assets/scss/1-modules/_buttons.scss
+++ b/src/assets/scss/1-modules/_buttons.scss
@@ -5,10 +5,6 @@
         color: $palette-primary !important;
         border: 1px solid $palette-primary;
         margin-top: 5%;
-        transition: opacity 0.5s ease;
-    }
-    &__button:hover {
-        opacity: 0.5;
     }
 }
 
@@ -19,4 +15,59 @@
         left: 50%;
         transform: translate(-50%, 0);
     }
+}
+
+@keyframes flickerAnimation {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-o-keyframes flickerAnimation {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes flickerAnimation {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes flickerAnimation {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.animate-flicker {
+    -webkit-animation: flickerAnimation 1.5s infinite;
+    -moz-animation: flickerAnimation 1.5s infinite;
+    -o-animation: flickerAnimation 1.5s infinite;
+    animation: flickerAnimation 1.5s infinite;
 }
