--- a/src/assets/scss/0-base/_base.scss
+++ b/src/assets/scss/0-base/_base.scss
@@ -20,6 +20,19 @@ button {
     margin: 0;
 }
 
+h2 {
+    font-family: 'Bebas Neue Book', sans-serif;
+    font-size: 2em;
+    margin-bottom: 1.4em;
+}
+
+h3 {
+    font-family: 'Bebas Neue Book', sans-serif;
+    font-weight: bold;
+    font-size: 2.5em;
+    text-align: left;
+}
+
 .big-text {
     font-size: 4em;
 }
