Recent projects description

--- a/src/assets/scss/0-base/_base.scss
+++ b/src/assets/scss/0-base/_base.scss
@@ -38,6 +38,14 @@ h3 {
     text-align: left;
 }
 
+a {
+    color: #DD4056;
+}
+
+a:hover {
+    color: #DD4056;
+}
+
 .big-text {
     font-size: 4em;
 }
