--- a/src/assets/scss/2-layouts/_work.scss
+++ b/src/assets/scss/2-layouts/_work.scss
@@ -3,6 +3,17 @@
     .container-fluid {
         padding: 5% 7% 0 7%;
     }
+    a:visited {
+        color: #DD4056;
+    }
+    h2 {
+        font-family: $font-tertiary;
+        font-size: 2em;
+        margin-bottom: 10px;
+    }
+    p {
+        margin-bottom: 30px;
+    }
     .row div {
         background-color: $palette-primary;
         height: 220px;
@@ -120,11 +131,6 @@
 }
 
 @media only screen and (max-width: 768px) {
-    h2 {
-        font-family: 'Bebas Neue Book', sans-serif;
-        font-size: 2em;
-        margin-bottom: 1em;
-    }
     #work {
         margin-top: 10%;
         padding: 5%;
