--- a/src/assets/scss/2-layouts/_about.scss
+++ b/src/assets/scss/2-layouts/_about.scss
@@ -5,6 +5,9 @@
     h3 {
         font-size: 1.8em;
     }
+    a:visited {
+        color: #DD4056;
+    }
 }
 
 @media only screen and (max-width: 768px) {
