--- a/src/assets/scss/2-layouts/_nav.scss
+++ b/src/assets/scss/2-layouts/_nav.scss
@@ -23,3 +23,11 @@
         opacity: 1;
     }
 }
+
+.navbar-fixed {
+    position: fixed;
+    width: 100%;
+    height: 60px;
+    background: white;
+    z-index: 10;
+}
