--- a/src/assets/scss/2-layouts/_work.scss
+++ b/src/assets/scss/2-layouts/_work.scss
@@ -1,7 +1,7 @@
 .small-grid {
     margin-top: 5%;
     .container-fluid {
-        padding: 5% 7% 0 7%;
+        padding: 5% 7%;
     }
     a:visited {
         color: #DD4056;
@@ -29,7 +29,6 @@
         }
     }
     .row div:hover {
-        z-index: 15;
         opacity: 1;
     }
     //wanderlust
@@ -40,7 +39,6 @@
         border-left: 2px solid #512548;
         border-top-left-radius: 4px;
         transition: box-shadow 1s ease-in-out, opacity 1s, all 1s;
-        z-index: 10;
         button {
             background-color: transparent;
             border: 1px solid #512548;
@@ -66,7 +64,6 @@
         border-bottom: 2px solid #301C41;
         border-bottom-right-radius: 4px;
         transition: box-shadow 0.8s ease-in-out, opacity 0.8s, all 0.8s;
-        z-index: 10;
         button {
             background-color: transparent;
             border: 1px solid #301C41;
@@ -87,7 +84,6 @@
     &__box--light:first-child {
         color: #301C41;
         border: 2px solid #863150;
-        z-index: 10;
         border-bottom-left-radius: 4px;
         transition: box-shadow 0.8s ease-in-out, opacity 0.8s, all 0.8s;
         button {
