--- a/src/assets/scss/0-base/_variables.scss
+++ b/src/assets/scss/0-base/_variables.scss
@@ -10,6 +10,7 @@ $x-palette-dark: #000;
 $palette-primary: $x-palette-light;
 $palette-secondary: $x-palette-dark-gray;
 $palette-paragraph: $x-palette-dark-gray;
+$palette-dark: $x-palette-dark;
 
 $font-primary: 'Open Sans Light', sans-serif;
 $font-secondary: 'Open Sans Semi Bold', sans-serif;
