--- a/src/assets/scss/2-layouts/_footer.scss
+++ b/src/assets/scss/2-layouts/_footer.scss
@@ -2,11 +2,96 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 60px;
-    background: white;
+    padding: 19px 0;
+    background: $palette-primary;
+    ul li {
+        display: inline;
+        margin-right: 10px;
+    }
+    ul li:last-child {
+        margin: 0;
+    }
+    .container-fluid {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 65px;
+    }
+    .container-fluid::before,
+    .container-fluid::after {
+        content: normal;
+    }
+    .top {
+        position: relative;
+        left: 25px;
+    }
 }
 
 .download {
-    background: black;
-    text-align: center;
+    background: $palette-dark;
+    @extend %flex-center;
+    padding: 50px 0;
+    button {
+        border-radius: 0 !important;
+        margin: 0;
+    }
+    i {
+        display: block;
+        text-align: center;
+        color: $palette-primary;
+    }
+    i:first-child {
+        margin-bottom: 20px;
+    }
+    i:last-child {
+        margin-top: 20px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .footer {
+        position: static;
+        width: 100%;
+        padding: 0;
+        background: $palette-primary;
+        ul li {
+            display: inline;
+            margin-right: 10px;
+        }
+        ul li:last-child {
+            margin: 0;
+        }
+        .container-fluid {
+            display: flex;
+            justify-content: space-between;
+            padding: 5px 35px;
+        }
+        .container-fluid::before,
+        .container-fluid::after {
+            content: normal;
+        }
+        .top {
+            position: relative;
+            left: 0;
+        }
+    }
+    .download {
+        background: $palette-dark;
+        padding: 50px 0;
+        button {
+            border-radius: 0 !important;
+            margin: 0;
+            width: 100%;
+        }
+        i {
+            display: block;
+            text-align: center;
+            color: $palette-primary;
+        }
+        i:first-child {
+            margin-bottom: 15px;
+        }
+        i:last-child {
+            margin-top: 15px;
+        }
+    }
 }
