--- a/src/assets/scss/2-layouts/_about.scss
+++ b/src/assets/scss/2-layouts/_about.scss
@@ -20,7 +20,7 @@
             background-size: 120%;
             min-height: 50vh;
             position: relative;
-            opacity: 0.9;
+            opacity: 1;
         }
         &__inner {
             font-family: $font-quaternary;
@@ -39,6 +39,10 @@
             margin-bottom: 5px;
         }
     }
+}
+
+#interests {
+    padding-top: 5%;
 }
 
 @media only screen and (max-width: 768px) {
@@ -66,7 +70,7 @@
                 background-size: 150%;
                 min-height: 35vh;
                 position: relative;
-                opacity: 0.9;
+                opacity: 1;
             }
             &__inner {
                 font-family: $font-quaternary;
