--- a/src/assets/scss/2-layouts/_footer.scss
+++ b/src/assets/scss/2-layouts/_footer.scss
@@ -47,6 +47,25 @@
     }
 }
 
+.footer-text {
+    opacity: 0;
+    -moz-transition: all 300ms ease-out;
+    -webkit-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+    position: relative;
+    bottom: -40px;
+}
+
+.lift-animate {
+    opacity: 1;
+    -moz-transform: translate3d(0px, -40px, 0px);
+    -webkit-transform: translate3d(0px, -40px, 0px);
+    -o-transform: translate(0px, -40px);
+    -ms-transform: translate(0px, -40px);
+    transform: translate3d(0px, -40px, 0px);
+}
+
 @media only screen and (max-width: 768px) {
     .footer {
         position: static;
