--- a/src/assets/scss/2-layouts/_header.scss
+++ b/src/assets/scss/2-layouts/_header.scss
@@ -51,6 +51,24 @@
     }
 }
 
+.nav-text {
+    opacity: 0;
+    -moz-transition: all 300ms ease-out;
+    -webkit-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+    position: relative;
+    top: -15px;
+}
+.drop-animate {
+    opacity: 1;
+    -moz-transform: translate3d(0px, 15px, 0px);
+    -webkit-transform: translate3d(0px, 15px, 0px);
+    -o-transform: translate(0px, 15px);
+    -ms-transform: translate(0px, 15px);
+    transform: translate3d(0px, 15px, 0px);
+}
+
 @media only screen and (max-width: 768px) {
     .wrapper {
         padding: 0;
