--- a/src/assets/scss/0-base/_base.scss
+++ b/src/assets/scss/0-base/_base.scss
@@ -39,11 +39,11 @@ h3 {
 }
 
 a {
-    color: #DD4056;
+    color: #991f67;
 }
 
 a:hover {
-    color: #DD4056;
+    color: #666;
     text-decoration: none;
 }
 
