--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -16,6 +16,7 @@
 /* MODULES - Individual site components */
 
 @import '1-modules/_buttons.scss';
+@import '1-modules/_collapsible.scss';
 @import '1-modules/_forms.scss';
 @import '1-modules/_typography.scss';
 
