--- a/src/assets/scss/0-base/_variables.scss
+++ b/src/assets/scss/0-base/_variables.scss
@@ -8,9 +8,10 @@ $x-palette-dark-gray: #313439;
 $x-palette-dark: #000;
 // Global variables
 $palette-primary: $x-palette-light;
-$palette-secondary: $x-palette-dark-gray;
+$palette-secondary: $x-palette-light-gray;
 $palette-paragraph: $x-palette-dark-gray;
 $palette-dark: $x-palette-dark;
+$palette-btn: $x-palette-violet;
 
 $font-primary: 'Open Sans Light', sans-serif;
 $font-secondary: 'Open Sans Semi Bold', sans-serif;
