--- a/src/assets/scss/1-modules/_buttons.scss
+++ b/src/assets/scss/1-modules/_buttons.scss
@@ -17,6 +17,28 @@
     }
 }
 
+#about {
+    .skill-btn {
+        background-color: $palette-btn;
+        color: $palette-primary;
+        border-radius: 0 !important;
+        text-align: left;
+        width: 100%;
+        padding: 2% 5%;
+        border: 0;
+    }
+    .tool-btn {
+        background-color: $palette-btn;
+        color: $palette-primary;
+        border-radius: 0 !important;
+        text-align: left;
+        width: 100%;
+        padding: 2% 5%;
+        border: 0;
+        border-top: 1px solid white;
+    }
+}
+
 @keyframes flickerAnimation {
     0% {
         opacity: 1;
