--- a/src/assets/scss/1-modules/_collapsible.scss
+++ b/src/assets/scss/1-modules/_collapsible.scss
@@ -2,6 +2,17 @@
     border: 1px solid $palette-secondary;
     padding: 2% 5%;
     ul li {
-        font-size: 0.9em;
+        border-bottom: 1px solid $palette-secondary;
+        padding: 8px;
+        p {
+            font-size: 0.9em;
+            margin: 0;
+        }
+        p:first-child {
+            font-weight: bold;
+        }
+    }
+    ul li:last-child {
+        border-bottom: 0;
     }
 }
