--- a/src/assets/scss/2-layouts/_work.scss
+++ b/src/assets/scss/2-layouts/_work.scss
@@ -1,7 +1,7 @@
 .small-grid {
     margin-top: 5%;
     .container-fluid {
-        padding: 5% 7%;
+        padding: 5% 7% 0 7%;
     }
     a:visited {
         color: #DD4056;
@@ -16,12 +16,15 @@
     }
     .row div {
         background-color: $palette-primary;
-        height: 220px;
+        height: 210px;
         padding: 10px 30px;
         position: relative;
         cursor: pointer;
         opacity: 0.9;
         text-align: center;
+        h3 {
+            font-size: 2em;
+        }
         p {
             font-family: $font-paragraph;
             font-size: 0.90em;
@@ -30,6 +33,9 @@
     }
     .row div:hover {
         opacity: 1;
+    }
+    hr {
+        margin-top: 7%;
     }
     //wanderlust
     &__box--dark:first-child {
