Mobile header fix

--- a/src/assets/scss/2-layouts/_footer.scss
+++ b/src/assets/scss/2-layouts/_footer.scss
@@ -145,7 +145,7 @@
             margin-top: 15px;
         }
     }
-    .home {
+    .header-bot {
         .parallax-section {
             background: url(img/header_background.jpg);
             background-position: 45% 50%;
