--- a/src/assets/scss/2-layouts/_about.scss
+++ b/src/assets/scss/2-layouts/_about.scss
@@ -1,6 +1,6 @@
 #about {
-    .container-fluid {    
-        padding: 3% 7% 0 7%;
+    .container-fluid {
+        padding: 5% 7% 0 7%;
     }
     h3 {
         font-size: 1.8em;
@@ -8,6 +8,41 @@
     a:visited {
         color: #DD4056;
     }
+    .home {
+        .parallax-section {
+            background: url(img/header_background.jpg);
+            background-attachment: fixed;
+            background-position: 40% 75%;
+            background-repeat: no-repeat;
+            webkit-background-size: 120%;
+            -moz-background-size: 120%;
+            -o-background-size: 120%;
+            background-size: 120%;
+            min-height: 50vh;
+            position: relative;
+            opacity: 1;
+        }
+        &__inner {
+            font-family: $font-quaternary;
+            color: $palette-primary;
+            position: absolute;
+            top: 42%;
+            left: 0;
+            right: 0;
+            p {
+                letter-spacing: 2px;
+            }
+        }
+        &__logo {
+            width: 30%;
+            margin: auto;
+            margin-bottom: 5px;
+        }
+    }
+}
+
+#interests {
+    padding-top: 5%;
 }
 
 @media only screen and (max-width: 768px) {
@@ -23,6 +58,36 @@
         }
         p {
             text-align: center;
+        }
+        .home {
+            .parallax-section {
+                background: url(img/header_background.jpg);
+                background-position: 45% 50%;
+                background-repeat: no-repeat;
+                webkit-background-size: 150%;
+                -moz-background-size: 150%;
+                -o-background-size: 150%;
+                background-size: 150%;
+                min-height: 100vh;
+                position: relative;
+                opacity: 1;
+            }
+            &__inner {
+                font-family: $font-quaternary;
+                color: $palette-primary;
+                position: absolute;
+                top: 41%;
+                left: 0;
+                right: 0;
+                p {
+                    letter-spacing: 2px;
+                }
+            }
+            &__logo {
+                width: 50%;
+                margin: auto;
+                margin-bottom: 5px;
+            }
         }
     }
 }
