About me short español structure

--- a/src/assets/scss/0-base/_base.scss
+++ b/src/assets/scss/0-base/_base.scss
@@ -26,9 +26,9 @@ button {
 }
 
 h2 {
-    font-family: 'Bebas Neue Book', sans-serif;
+    font-family: 'Bebas Neue Bold', sans-serif;
     font-size: 2em;
-    margin-bottom: 1.4em;
+    margin-bottom: 20px;
 }
 
 h3 {
