about me mobile

--- a/src/assets/scss/1-modules/_buttons.scss
+++ b/src/assets/scss/1-modules/_buttons.scss
@@ -28,6 +28,9 @@
         border: 0;
         border-top: 1px solid white;
     }
+    .collapse-btn:hover {
+        background-color: #70164b;
+    }
 }
 
 @keyframes flickerAnimation {
