--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -18,6 +18,7 @@
 @import '1-modules/_buttons.scss';
 @import '1-modules/_collapsible.scss';
 @import '1-modules/_typography.scss';
+@import '1-modules/_modals.scss';
 
 /* LAYOUTS - Page layout styles */
 
