--- a/src/assets/scss/2-layouts/_work.scss
+++ b/src/assets/scss/2-layouts/_work.scss
@@ -38,7 +38,7 @@
         border-top: 2px solid #512548;
         border-left: 2px solid #512548;
         border-top-left-radius: 4px;
-        transition: box-shadow 1s ease-in-out, opacity 1s, all 1s;
+        transition: opacity 1s, all 1s;
         button {
             background-color: transparent;
             border: 1px solid #512548;
