--- a/src/assets/scss/1-modules/_modals.scss
+++ b/src/assets/scss/1-modules/_modals.scss
@@ -80,7 +80,7 @@
             font-size: 2em;
             position: absolute;
             top: -20px;
-            right: 0;
+            right: 20px;
         }
         &__btns {
             text-align: center;
